--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
+    "lint:js": "eslint ./ --fix",
     "test": ""
   },
   "license": "MIT",
   "devDependencies": {
-    "tslint": "^6.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.41.6",
     "webpack-merge": "^4.2.2"
