--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,10 @@
         "semi": [
             "error",
             "always"
+        ],
+        "comma-dangle": [
+            "error",
+            "always-multiline"
         ]
     }
 }
