--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "scripts": {
     "lint:js": "eslint ./ --fix",
+    "build:dev": "webpack --config ./webpack/dev.js",
+    "cleanup": "rimraf dist",
     "test": ""
   },
   "license": "MIT",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^6.8.0",
+    "html-webpack-plugin": "^3.2.0",
+    "rimraf": "^3.0.2",
+    "tslint": "^6.0.0",
     "typescript": "^3.8.3",
     "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   }
 }
