--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^6.8.0",
     "html-webpack-plugin": "^3.2.0",
     "rimraf": "^3.0.2",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "tslint": "^6.0.0",
     "typescript": "^3.8.3",
     "webpack": "^4.41.6",
