--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "wasm": "file:./pkg"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.4",
     "awesome-typescript-loader": "^5.2.1",
     "eslint": "^6.8.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.2.3",
     "rimraf": "^3.0.2",
     "script-ext-html-webpack-plugin": "^2.1.4",
-    "tslint": "^6.0.0",
+    "ts-jest": "^25.2.1",
+    "tslint": "^6.1.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.41.6",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
